tests/rosetta/transpiler/FS/bitmap.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/bitmap.fs(147,19): error FS0039: The field, constructor or member 'ok' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/bitmap.fs(150,91): error FS0039: The field, constructor or member 'pixel' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/bitmap.fs(179,9): warning FS0020: This expression should have type 'unit', but has type 'bool'. Use 'ignore' to discard the result of the expression, or 'let' to bind the result to a name.

/workspace/mochi/tests/rosetta/transpiler/FS/bitmap.fs(180,9): warning FS0020: This expression should have type 'unit', but has type 'bool'. Use 'ignore' to discard the result of the expression, or 'let' to bind the result to a name.

/workspace/mochi/tests/rosetta/transpiler/FS/bitmap.fs(181,9): warning FS0020: This expression should have type 'unit', but has type 'bool'. Use 'ignore' to discard the result of the expression, or 'let' to bind the result to a name.

/workspace/mochi/tests/rosetta/transpiler/FS/bitmap.fs(187,28): error FS0039: The field, constructor or member 'ok' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/bitmap.fs(188,93): error FS0039: The field, constructor or member 'pixel' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/bitmap.fs(189,28): error FS0039: The field, constructor or member 'ok' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/bitmap.fs(190,95): error FS0039: The field, constructor or member 'pixel' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/bitmap.fs(191,28): error FS0039: The field, constructor or member 'ok' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/bitmap.fs(192,24): error FS0039: The field, constructor or member 'pixel' is not defined
